[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/app.gd" type="Script" id=1]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.231373, 0.309804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuItems" type="HBoxContainer" parent="Content"]
margin_right = 1280.0
margin_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 35 )
custom_constants/separation = 0

[node name="File" type="MenuButton" parent="Content/MenuItems"]
margin_right = 60.0
margin_bottom = 35.0
rect_min_size = Vector2( 60, 0 )
theme = ExtResource( 2 )
text = "File"
items = [ "New file", null, 0, false, false, 0, 0, null, "", false, "Open File", null, 0, false, false, 1, 0, null, "", false, "Save", null, 0, false, false, 2, 0, null, "", false, "Save as", null, 0, false, false, 3, 0, null, "", false, "Quit", null, 0, false, false, 4, 0, null, "", false ]
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="MenuButton" parent="Content/MenuItems"]
margin_left = 60.0
margin_right = 120.0
margin_bottom = 35.0
rect_min_size = Vector2( 60, 0 )
text = "Help"
items = [ "About", null, 0, false, false, 0, 0, null, "", false, "Jhow website", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Content"]
margin_top = 35.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
minimap_draw = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFileDialog" type="FileDialog" parent="."]
margin_left = 175.0
margin_top = 83.0
margin_right = 892.0
margin_bottom = 519.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users/jonathan/drive/jhow/gamedev/godot/Text Editor"
current_path = "/Users/jonathan/drive/jhow/gamedev/godot/Text Editor/"

[node name="SaveAsFileDialog" type="FileDialog" parent="."]
margin_left = 175.0
margin_top = 83.0
margin_right = 892.0
margin_bottom = 519.0
window_title = "Save as file"
access = 2
current_dir = "/Users/jonathan/drive/jhow/gamedev/godot/Text Editor"
current_path = "/Users/jonathan/drive/jhow/gamedev/godot/Text Editor/"

[node name="AboutWindow" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -28.5
margin_right = 121.0
margin_bottom = 28.5
window_title = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AboutWindow"]
margin_left = 5.3811
margin_top = 13.3496
margin_right = 239.381
margin_bottom = 44.3496
text = "Created by: Jhow using the Godot Game Engie"
autowrap = true
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="SaveAsFileDialog" to="." method="_on_SaveAsFileDialog_file_selected"]
